--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng2-search-filter": "^0.5.1",
     "ng2-truncate": "^1.3.17",
     "ngx-mat-select-search": "^7.0.2",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-toastr": "^16.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
